@@ -40,7 +40,9 @@ public class ZkRegistryCenter implements RegistryCenter {
     @Value("${sorpc.zkRoot}")
     String root;
 
-    private List<CuratorCache> caches = new ArrayList<>();
+//    private List<CuratorCache> caches = new ArrayList<>();
+
+    private List<TreeCache> caches = new ArrayList<>();
 
     @Override
     public void start() {
@@ -57,8 +59,10 @@ public class ZkRegistryCenter implements RegistryCenter {
 
     @Override
     public void stop() {
+        log.info(" ===> zk tree cache closed.");
+//        caches.forEach(CuratorCache::close);
+        caches.forEach(TreeCache::close);
         log.info(" ===> zk client stopped.");
-        caches.forEach(CuratorCache::close);
         client.close();
     }
 
@@ -99,17 +103,34 @@ public class ZkRegistryCenter implements RegistryCenter {
         }
     }
 
+//    @SneakyThrows
+//    @Override
+//    public void subscribe(ServiceMeta service, ChangedListener listener) {
+//        CuratorCache cache = CuratorCache.builder(client, "/"+service.toPath()
+//                        ).build();
+//        cache.listenable().addListener((type, oldNode, newNode) -> {
+//            // 有任何节点变动这里会执行
+//            log.info("zk subscribe event: " + type);
+//            List<InstanceMeta> nodes = fetchAll(service);
+//            listener.fire(new Event(nodes));
+//        });
+//        cache.start();
+//        caches.add(cache);
+//    }
+
     @SneakyThrows
     @Override
     public void subscribe(ServiceMeta service, ChangedListener listener) {
-        CuratorCache cache = CuratorCache.builder(client, "/"+service.toPath()
-                        ).build();
-        cache.listenable().addListener((type, oldNode, newNode) -> {
-            // 有任何节点变动这里会执行
-            log.info("zk subscribe event: " + type);
-            List<InstanceMeta> nodes = fetchAll(service);
-            listener.fire(new Event(nodes));
-        });
+        final TreeCache cache = TreeCache.newBuilder(client, "/"+service.toPath())
+                .setCacheData(true).setMaxDepth(2).build();
+        cache.getListenable().addListener(
+                (curator, event) -> {
+                    // 有任何节点变动这里会执行
+                    log.info("zk subscribe event: " + event);
+                    List<InstanceMeta> nodes = fetchAll(service);
+                    listener.fire(new Event(nodes));
+                }
+        );
         cache.start();
         caches.add(cache);
     }
@@ -154,6 +175,6 @@ public class ZkRegistryCenter implements RegistryCenter {
             } catch (Exception e) {
                 throw new RpcException(e);
             }
-        }).toList();
+        }).collect(Collectors.toList());
     }
 }
